search editor - deletion